--- a/pages/index.html
+++ b/pages/index.html
@@ -4,9 +4,11 @@
     <head>
         <title>Loading</title>
      <meta charset="UTF-8" />
-     <meta http-equiv="refresh" content="3; URL=Link" />
+     <meta http-equiv="refresh" content="3; URL=index.js" />
    </head>
    <body>
-     <div id ="root"></div>
+     <div id ="root">
+<script src="index.js"></script>
+     </div>
    </body>
 </html>
